--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,9 +8,9 @@ services:
     ports:
       - 80:3000
     volumes:
-      - /data/homepage/config:/app/config # Make sure your local config directory exists
-      - /data/homepage/images:/app/public/images
-      - /data/homepage/icons:/app/public/icons
+      - ~/server/homepage/config:/app/config # Make sure your local config directory exists
+      - ~/server/homepage/images:/app/public/images
+      - ~/server/homepage/icons:/app/public/icons
     restart: unless-stopped
 
   # dashy:
