--- a/homepage/config/settings.yaml
+++ b/homepage/config/settings.yaml
@@ -2,9 +2,8 @@
 # For configuration options and examples, please see:
 # https://gethomepage.dev/latest/configs/settings
 title: Dashboard
-providers:
-  openweathermap: openweathermapapikey
-  weatherapi: weatherapiapikey
+
+cardBlur: sm
 
 background:
   image: "https://images.unsplash.com/photo-1620121478247-ec786b9be2fa?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
