--- a/homepage/config/services.yaml
+++ b/homepage/config/services.yaml
@@ -2,17 +2,135 @@
 # For configuration options and examples, please see:
 # https://gethomepage.dev/latest/configs/services
 
-- My First Group:
-    - My First Service:
-      href: http://localhost/
-      description: Homepage is awesome
+- Group A:
+    - Sonarr:
+        icon: sonarr.png
+        description: "TV shows"
+        href: http://192.168.0.27:8989
+        server: dockerproxy
+        container: sonarr
+        widget:
+          type: sonarr
+          url: http://transmission-openvpn:8989
+          key: {{HOMEPAGE_VAR_SONARR_API_KEY}}
 
-- My Second Group:
-    - My Second Service:
-      href: http://localhost/
-      description: Homepage is the best
+    - Radarr:
+        icon: radarr.png
+        description: "Movies"
+        href: http://192.168.0.27:7878/
+        server: dockerproxy
+        container: radarr
+        widget:
+          type: radarr
+          url: http://transmission-openvpn:7878
+          key: {{HOMEPAGE_VAR_RADARR_API_KEY}}
 
-- My Third Group:
-    - My Third Service:
-      href: http://localhost/
-      description: Homepage is 😎
+    - Bazarr:
+        icon: bazarr.png
+        description: "Subtitles"
+        href: http://192.168.0.27:6767/
+        server: dockerproxy
+        container: bazarr
+        widget:
+          type: bazarr
+          url: http://transmission-openvpn:6767
+          key: {{HOMEPAGE_VAR_BAZARR_API_KEY}}
+
+    - Prowlarr:
+        icon: prowlarr.png
+        description: "Torrent Indexer"
+        href: http://192.168.0.27:9696/
+        server: dockerproxy
+        container: prowlarr
+        widget:
+          type: prowlarr
+          url: http://transmission-openvpn:9696
+          key: {{HOMEPAGE_VAR_PROWLARR_API_KEY}}
+
+    - Readarr eBooks:
+        icon: readarr.png
+        description: "Torrent Indexer"
+        href: http://192.168.0.27:8787/
+        server: dockerproxy
+        container: readarr-ebooks
+        widget:
+          type: readarr
+          url: http://transmission-openvpn:8787
+          key: {{HOMEPAGE_VAR_READARR_API_KEY}}
+          widget:
+
+    - Transmission:
+        icon: transmission.png
+        description: "Torrent Download Client"
+        href: http://192.168.0.27:9091
+        server: dockerproxy
+        container: transmission-openvpn
+        widget:
+          type: transmission
+          url: http://transmission-openvpn:9091
+          username: ""
+          password: ""
+          rpcUrl: "/transmission/"
+
+- Group B:
+    - Jellyfin:
+        icon: jellyfin.png
+        description: "Media server"
+        href: http://192.168.0.27:8096/
+        server: dockerproxy
+        container: jellyfin
+        widget:
+          type: jellyfin
+          url: http://192.168.0.27:8096
+          key: {{HOMEPAGE_VAR_JELLYFIN_API_KEY}}
+          enableBlocks: true # optional, defaults to false
+          enableNowPlaying: true # optional, defaults to true
+          # enableUser: true # optional, defaults to false
+          showEpisodeNumber: true # optional, defaults to false
+          expandOneStreamToTwoRows: false # optional, defaults to true
+
+    - Jellyseerr:
+        icon: jellyseerr.png
+        description: "Media search"
+        href: http://192.168.0.27:5055
+        server: dockerproxy
+        container: jellyseerr
+        widget:
+          type: jellyseerr
+          url: http://transmission-openvpn:5055
+          key: {{HOMEPAGE_VAR_JELLYSEERR_API_KEY}}
+
+    - Calibre:
+        icon: calibre.png
+        description: "ebooks library"
+        href: http://192.168.0.27:8083/
+        server: dockerproxy
+        container: calibre-web
+        widget:
+          type: calibreweb
+          url: http://calibre-web:8083
+          username: {{HOMEPAGE_VAR_CALIBRE_USERNAME}}
+          password: {{HOMEPAGE_VAR_CALIBRE_PASSWORD}}
+
+    - Gitlab:
+        icon: gitlab.png
+        description: "Gitlab"
+        href: http://192.168.0.27:8929
+        server: dockerproxy
+        container: gitlab
+
+    - Gitlab Runner:
+        server: dockerproxy
+        container: gitlab-runner
+
+    - Portainer:
+        icon: portainer.png
+        description: "Docker Management"
+        href: https://192.168.0.27:9443
+        server: dockerproxy
+        container: portainer
+        widget:
+          type: portainer
+          url: https://portainer:9443
+          env: 2
+          key: ptr_RRcdkzHTEN7sD7WZnsRCCrmRwiddl9EB1YOLETM165A=
