--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,10 @@
+include:
+  - compose-files/management/compose.yaml
+  - compose-files/openvpn-transmission/compose.yaml
+  - compose-files/servarr/compose.yaml
+  - compose-files/media/compose.yaml
+  - compose-files/gitlab/compose.yaml
+
 services:
   homepage:
     image: ghcr.io/gethomepage/homepage:latest
@@ -5,266 +12,52 @@ services:
     environment:
       PUID: 1000
       PGID: 1000
+      HOMEPAGE_VAR_SONARR_API_KEY: $SONARR_API_KEY
+      HOMEPAGE_VAR_RADARR_API_KEY: $RADARR_API_KEY
+      HOMEPAGE_VAR_JELLYFIN_API_KEY: $JELLYFIN_API_KEY
+      HOMEPAGE_VAR_CALIBRE_USERNAME: $CALIBRE_USERNAME
+      HOMEPAGE_VAR_CALIBRE_PASSWORD: $CALIBRE_PASSWORD
+      HOMEPAGE_VAR_BAZARR_API_KEY: $BAZARR_API_KEY
+      HOMEPAGE_VAR_JELLYSEERR_API_KEY: $JELLYSEERR_API_KEY
+      HOMEPAGE_VAR_PROWLARR_API_KEY: $PROWLARR_API_KEY
+      HOMEPAGE_VAR_READARR_API_KEY: $READARR_API_KEY
     ports:
       - 80:3000
     volumes:
-      - ~/server/homepage/config:/app/config # Make sure your local config directory exists
+      - ~/server/homepage/config:/app/config
       - ~/server/homepage/images:/app/public/images
       - ~/server/homepage/icons:/app/public/icons
     restart: unless-stopped
+    networks:
+      - shared-network
+      # - vpn-network
 
-  # dashy:
-  #   image: lissy93/dashy
-  #   container_name: dashy
-  #   volumes:
-  #     - ~/server/config/dashy:/app/user-data
-  #   ports:
-  #     - 80:8080
-  #   restart: unless-stopped
-  #   # Configure healthchecks
-  #   healthcheck:
-  #     test: ["CMD", "node", "/app/services/healthcheck"]
-  #     interval: 1m30s
-  #     timeout: 10s
-  #     retries: 3
-  #     start_period: 40s
-
-  calibre-web:
-    image: lscr.io/linuxserver/calibre-web:latest
-    container_name: calibre-web
+  dockerproxy:
+    image: ghcr.io/tecnativa/docker-socket-proxy:latest
+    container_name: dockerproxy
     environment:
-      PUID: 1000
-      PGID: 1000
-      TZ: Etc/UTC
-      DOCKER_MODS: linuxserver/mods:universal-calibre # required for ebook conversion
-      OAUTHLIB_RELAX_TOKEN_SCOPE: 1 #optional
-    volumes:
-      - ~/server/config/calibre:/config
-      - /media/server/transcend/books:/books
+      CONTAINERS: 1 # Allow access to viewing containers
+      SERVICES: 1 # Allow access to viewing services (necessary when using Docker Swarm)
+      TASKS: 1 # Allow access to viewing tasks (necessary when using Docker Swarm)
+      POST: 0 # Disallow any POST operations (effectively read-only)
     ports:
-      - 8083:8083
-    restart: unless-stopped
-
-  pihole:
-    container_name: pihole
-    image: pihole/pihole:latest
-    ports:
-      - "53:53/tcp"
-      - "53:53/udp" # https://github.com/pi-hole/docker-pi-hole?tab=readme-ov-file#installing-on-ubuntu-or-fedora
-      - "8080:80/tcp"
-    environment:
-      WEBPASSWORD: $PIHOLE_WEBPASSWORD
-      DNSMASQ_LISTENING: "all"
+      - 2375:2375
+      # - 127.0.0.1:2375:2375
     volumes:
-      - "~/server/config/pihole:/etc/pihole"
-      - "~/server/config/pihole/dnsmasq.d:/etc/dnsmasq.d"
-    restart: unless-stopped
-
-  portainer:
-    image: portainer/portainer-ce:latest
-    container_name: portainer
-    ports:
-      - 8000:8000
-      - 9443:9443
-    restart: unless-stopped
-    volumes:
-      - "~/server/config/portainer:/data"
-      - "/var/run/docker.sock:/var/run/docker.sock"
-
-  # uptime-kuma:
-  #   image: louislam/uptime-kuma:latest
-  #   container_name: uptime-kuma
-  #   volumes:
-  #     - ~/server/config/uptimekuma:/app/data
-  #   ports:
-  #     - 3001:3001
-  #   restart: unless-stopped
-  
-  watchtower:
-    container_name: watchtower
-    image: containrrr/watchtower
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-    restart: unless-stopped
-
-  openvpn-client:
-    image: haugene/transmission-openvpn
-    container_name: transmission-openvpn
-    cap_add:
-      - NET_ADMIN
-    devices:
-      - /dev/net/tun
-    volumes:
-      - ~/server/config/transmission/config:/config/transmission-home
-      - ~/server/config/openvpn/config:/config/openvpn
-      - /media/server/transcend/torrents:/downloads
-    environment:
-      OPENVPN_PROVIDER: PRIVATEVPN
-      OPENVPN_USERNAME: $OPENVPN_USERNAME
-      OPENVPN_PASSWORD: $OPENVPN_PASSWORD
-      DISABLE_IPV6: true
-      TRANSMISSION_WEB_UI_PORT: 9091
-      LOCAL_NETWORK: 192.168.0.0/24
-      TRANSMISSION_DOWNLOAD_DIR: /downloads
-    sysctls:
-      - "net.ipv6.conf.all.disable_ipv6=0"  # This bypasses Docker weirdness with ipv6
-    ports:  # map all svc you wanna route through VPN
-      - 9091:9091 # Transmission Web UI
-      - 8191:8191 # Flaresolverr
-      - 9696:9696 # Prowlarr
-      - 8989:8989 # Sonarr
-      - 7878:7878 # Radarr
-      - 6767:6767 # Bazarr
-      - 5055:5055 # Jellyseerr
+      - /var/run/docker.sock:/var/run/docker.sock:ro # Mounted as read-only
     restart: unless-stopped
     networks:
+      - shared-network
       - vpn-network
 
-  jellyseerr:
-    image: fallenbagel/jellyseerr:latest
-    container_name: jellyseerr
-    depends_on:
-      - openvpn-client
-    network_mode: "service:openvpn-client"
-    environment:
-      LOG_LEVEL: debug
-      TZ: Etc/UTC
-    volumes:
-      - ~/server/config/jellyseerr/config:/app/config
-    restart: unless-stopped
-
-  prowlarr:
-    image: lscr.io/linuxserver/prowlarr:latest
-    container_name: prowlarr
-    depends_on:
-      - openvpn-client
-    network_mode: "service:openvpn-client"
-    volumes:
-      - ~/server/config/prowlarr/config:/config
-    environment:
-      # PUID: 1005
-      # PGID: 1002
-      TZ: Etc/UTC
-    restart: unless-stopped
-
-  flaresolverr:
-    image: flaresolverr/flaresolverr:latest
-    container_name: flaresolverr
-    depends_on:
-      - openvpn-client
-    network_mode: "service:openvpn-client"
-    environment:
-      LOG_LEVEL: debug
-    restart: unless-stopped
-
-  sonarr:
-    image: lscr.io/linuxserver/sonarr:latest
-    container_name: sonarr
-    depends_on:
-      - openvpn-client
-    network_mode: "service:openvpn-client"
-    environment:
-      # PUID: 1000
-      # PGID: 1000
-      TZ: Etc/UTC
-    volumes:
-      - ~/server/config/sonarr/config:/config
-      - /media/server/transcend/tv:/tv
-      - /media/server/transcend/torrents:/downloads
-    restart: unless-stopped
-
-
-  radarr:
-    image: lscr.io/linuxserver/radarr:latest
-    container_name: radarr
-    depends_on:
-      - openvpn-client
-    network_mode: "service:openvpn-client"
-    environment:
-      # PUID: 1000
-      # PGID: 1000
-      TZ: Etc/UTC
-    volumes:
-      - ~/server/config/radarr/config:/config
-      - /media/server/transcend/movies:/movies
-      - /media/server/transcend/torrents:/downloads
-    restart: unless-stopped
-
-  bazarr:
-    image: lscr.io/linuxserver/bazarr:latest
-    container_name: bazarr
-    depends_on:
-      - openvpn-client
-    network_mode: "service:openvpn-client"
-    environment:
-      # PUID: 1000
-      # PGID: 1000
-      TZ: Etc/UTC
-    volumes:
-      - ~/server/config/bazarr/config:/config
-      - /media/server/transcend/movies:/movies
-      - /media/server/transcend/tv:/tv
-    restart: unless-stopped
-
-  jellyfin:
-    image: jellyfin/jellyfin:latest
-    container_name: jellyfin
-    # user: "1000:1000"
-    network_mode: "host"
-    volumes:
-      - ~/server/config/jellyfin/config:/config
-      - ~/server/config/jellyfin/cache:/cache
-      - type: bind
-        source: /media/server/transcend/movies
-        target: /movies
-      - type: bind
-        source: /media/server/transcend/tv
-        target: /tv
-    restart: "unless-stopped"
-    # # Optional - alternative address used for autodiscovery
-    # environment:
-    #   - JELLYFIN_PublishedServerUrl=http://192.168.0.27:8096
-    # # Optional - may be necessary for docker healthcheck to pass if running in host network mode
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-
-  # gitlab:
-  #   image: gitlab/gitlab-ce:latest
-  #   container_name: gitlab
-  #   restart: unless-stopped
-  #   hostname: "192.168.0.27"
-  #   environment:
-  #     GITLAB_OMNIBUS_CONFIG: |
-  #       external_url "http://192.168.0.27:8929"
-  #       gitlab_rails["gitlab_shell_ssh_port"] = 2424
-  #   ports:
-  #     - "8929:8929"
-  #     - "443:443"
-  #     - "2424:22"
-  #   volumes:
-  #     - "~/server/config/gitlab/config:/etc/gitlab"
-  #     - "~/server/config/gitlab/logs:/var/log/gitlab"
-  #     - "~/server/config/gitlab/data:/var/opt/gitlab"
-  #     - "~/server/config/gitlabrunner/config:/etc/gitlab-runner"
-  #   shm_size: "256m"
-  
-  # gitlab-runner:
-  #   image: gitlab/gitlab-runner:latest
-  #   container_name: gitlab-runner
-  #   network_mode: "host"
-  #   restart: unless-stopped
-  #   volumes:
-  #     - "~/server/config/gitlabrunner/config:/etc/gitlab-runner"
-  #     - "/var/run/docker.sock:/var/run/docker.sock"
-  #   environment:
-  #     CI_SERVER_URL: http://192.168.0.27:8929/
-  #     REGISTRATION_TOKEN: $GITLAB_RUNNER_REGISTRATION_TOKEN # Replace with your GitLab Runner registration token
 
 
 networks:
   vpn-network:
     name: vpn-network 
     driver: bridge
-    ipam:
-      config:
-        - subnet: 172.20.0.0/16
+    # ipam:
+    #   config:
+    #     - subnet: 172.20.0.0/16
+  shared-network:
+    driver: bridge
