--- a/homepage/config/widgets.yaml
+++ b/homepage/config/widgets.yaml
@@ -1,15 +1,15 @@
 # For configuration options and examples, please see:
 # https://gethomepage.dev/latest/configs/service-widgets
 ---
-- resources:
-    # label: System
-    cpu: true
-    cputemp: true
-    tempmin: 0 # optional, minimum cpu temp
-    tempmax: 100 # optional, maximum cpu temp
-    uptime: true
-    memory: true
-    disk: /
+# - resources:
+#     label: System
+#     cpu: true
+#     cputemp: true
+#     tempmin: 0 # optional, minimum cpu temp
+#     tempmax: 100 # optional, maximum cpu temp
+#     uptime: true
+#     memory: true
+#     disk: /
 
 - openmeteo:
     latitude: 51.176082
