--- a/compose-files/media/compose.yaml
+++ b/compose-files/media/compose.yaml
@@ -41,23 +41,25 @@ services:
       - shared-network
 
   jellystat-db:
+    container_name: jellystat-db
     image: postgres:15.2
     environment:
-      POSTGRES_DB: 'jfstat'
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: mypassword
+      POSTGRES_DB: $POSTGRES_DB
+      POSTGRES_USER: $POSTGRES_USER
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
     volumes:
     - ~/server/config/postgres-data:/var/lib/postgresql/data
     restart: unless-stopped
 
   jellystat:
+    container_name: jellystat
     image: cyfershepard/jellystat:latest
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: mypassword
+      POSTGRES_USER: $POSTGRES_USER
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
       POSTGRES_IP: jellystat-db
       POSTGRES_PORT: 5432
-      JWT_SECRET: 'my-secret-jwt-key'
+      JWT_SECRET: $JWT_SECRET
     ports:
       - "3000:3000" #Server Port
     volumes:
