--- a/compose-files/media/compose.yaml
+++ b/compose-files/media/compose.yaml
@@ -67,3 +67,18 @@ services:
     depends_on:
       - jellystat-db
     restart: unless-stopped
+
+  stirling-pdf:
+    container_name: stirling-pdf
+    image: frooodle/s-pdf:latest
+    ports:
+      - "8080:8080"
+    volumes:
+      - ~/server/config/stirlingpdf/trainingData:/usr/share/tessdata #Required for extra OCR languages
+      - ~/server/config/stirlingpdf/extraConfigs:/configs
+#      - ~/server/config/stirlingpdf/customFiles:/customFiles/
+#      - ~/server/config/stirlingpdf/logs:/logs/
+    environment:
+      - DOCKER_ENABLE_SECURITY=false
+      - INSTALL_BOOK_AND_ADVANCED_HTML_OPS=false
+      - LANGS=en_GB
