--- a/compose-files/openvpn-transmission/compose.yaml
+++ b/compose-files/openvpn-transmission/compose.yaml
@@ -33,6 +33,7 @@ services:
       # - 8787:8787 # Readarr EBOOKS
     restart: unless-stopped
     networks:
-      - vpn-network
-      - shared-network
+      vpn-network:
+        ipv4_address: 172.19.0.7
+      shared-network:
 
